--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 						</div>
 					</nav>
 
-				<!-- Banner --> <!--
-					<section id="banner">
+				<!-- Banner -->
+					<section>
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Nilay Ghosh</h2>
 							<p>Nuclear Astrophysicist + Cinematographer</p>
 						</div>
-					</section> -->
+					</section> 
 
 				<!-- Wrapper -->
 					<section id="wrapper">
