--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					</nav>
 
 				<!-- Banner -->
-					<section>
-						<div class="inner">
+					<section class="banner">
+						<div>
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Nilay Ghosh</h2>
 							<p>Nuclear Astrophysicist + Cinematographer</p>
