--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</nav>
 
 				<!-- Banner -->
-					<section class="banner">
+					<section id="banner">
 						<div>
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Nilay Ghosh</h2>
