--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<div>
+						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Nilay Ghosh</h2>
 							<p>Nuclear Astrophysicist + Cinematographer</p>
