--- a/index.html
+++ b/index.html
@@ -106,18 +106,7 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
+										
 									</section>
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
@@ -130,7 +119,7 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h4>Icons</h4>
+							<h4>Connect</h4>
 												<ul class="icons">
 													<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 													<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
