--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic02.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Research & Publications</h2>
 										<p>Here, you'll find a collection of my published works and ongoing research projects. Delve into my research interests, discover the latest findings, and explore the exciting world of academia</p>
@@ -121,9 +121,9 @@
 						<div class="inner">
 							<h4>Connect</h4>
 												<ul class="icons">
-													<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+													<li><a href="x.com/nilayhere" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+													<li><a href="facebook.com/nilayhere" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+													<li><a href="instagram.com/nilayyhere" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 													<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 												</ul>
 	
