--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Other Activities</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>Beyond my research and publications, I'm actively involved in various other enriching activities. This section offers a glimpse into the multifaceted aspects of my life. Click below to discover the range of activities that complement my research journey and make me who I am.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
