--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 						<div class="inner">
 							<h4>Connect</h4>
 												<ul class="icons">
-													<li><a href="x.com/nilayhere" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="facebook.com/nilayhere" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-													<li><a href="instagram.com/nilayyhere" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+													<li><a href="https://x.com/nilayhere" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+													<li><a href="https://facebook.com/nilayhere" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+													<li><a href="https://instagram.com/nilayyhere" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 													<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 												</ul>
 	
