--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Quantum Computation and Artificial Intelligence: A Symphony of Tomorrow's Technological Artistry"</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>Embark on a journey into the future where the realms of quantum computation and artificial intelligence intertwine to create a fascinating fusion of technology and creativity. This blog explores the uncharted territories where quantum meets AI, unraveling the potential, challenges, and the awe-inspiring future that lies ahead.</p>
+											
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Embark on a journey into the future where the realms of quantum computation and artificial intelligence intertwine to create a fascinating fusion of technology and creativity. This blog explores the uncharted territories where quantum meets AI, unraveling the potential, challenges, and the awe-inspiring future that lies ahead.</p>
+											<h3 class="major">Celestial Rhythms: The Extraordinary Life Cycle of a Star</h3>
+											<p>Explore the mesmerizing life cycle of a star, from the dazzling birth of a stellar newborn to the explosive grand finale. Unravel the captivating cosmic tale that shapes the universe's most awe-inspiring performers.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										
