--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 											<h3 class="major">Quantum Computation and Artificial Intelligence: A Symphony of Tomorrow's Technological Artistry"</h3>
 											<p>Embark on a journey into the future where the realms of quantum computation and artificial intelligence intertwine to create a fascinating fusion of technology and creativity. This blog explores the uncharted territories where quantum meets AI, unraveling the potential, challenges, and the awe-inspiring future that lies ahead.</p>
 											
-											<a href="https://nilayhere.github.io/article/quantum-ai.html" class="special">Read more</a>
+											<a href="https://nilayhere.github.io/quantum-ai.html" class="special">Read more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Celestial Rhythms: The Extraordinary Life Cycle of a Star</h3>
 											<p>Explore the mesmerizing life cycle of a star, from the dazzling birth of a stellar newborn to the explosive grand finale. Unravel the captivating cosmic tale that shapes the universe's most awe-inspiring performers.</p>
-											<a href="https://nilayhere.github.io/article/star-cycle.html" class="special">Read more</a>
+											<a href="https://nilayhere.github.io/star-cycle.html" class="special">Read more</a>
 										</article>
 										
 									</section>
