--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Research</a></li>
-								<li><a href="elements.html">Publications</a></li>
+								<li><a href="#">Research</a></li>
+								<li><a href="#">Publications</a></li>
 								<li><a href="#">About Me</a></li>
 								<li><a href="#">Other Activities</a></li>
 							</ul>
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Nilay Ghosh</h2>
-							<p>Nuclear Astrophysicist + Cinematographer</p>
+							<p>Nuclear Astrophysicist</p>
 						</div>
 					</section> 
 
@@ -99,13 +99,13 @@
 											<h3 class="major">Quantum Computation and Artificial Intelligence: A Symphony of Tomorrow's Technological Artistry"</h3>
 											<p>Embark on a journey into the future where the realms of quantum computation and artificial intelligence intertwine to create a fascinating fusion of technology and creativity. This blog explores the uncharted territories where quantum meets AI, unraveling the potential, challenges, and the awe-inspiring future that lies ahead.</p>
 											
-											<a href="https://nilayhere.github.io/quantum-ai.html" class="special">Read more</a>
+											<a href="quantum-ai.html" class="special">Read more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Celestial Rhythms: The Extraordinary Life Cycle of a Star</h3>
 											<p>Explore the mesmerizing life cycle of a star, from the dazzling birth of a stellar newborn to the explosive grand finale. Unravel the captivating cosmic tale that shapes the universe's most awe-inspiring performers.</p>
-											<a href="https://nilayhere.github.io/star-cycle.html" class="special">Read more</a>
+											<a href="star-cycle.html" class="special">Read more</a>
 										</article>
 										
 									</section>
