--- a/quantum-ai.html
+++ b/quantum-ai.html
@@ -31,10 +31,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#">Research</a></li>
+								<li><a href="#">Publications</a></li>
+								<li><a href="#">About Me</a></li>
+								<li><a href="#">Other Activities</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -52,6 +52,8 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									<img src="images/pic04.jpg" alt="">
+								
                   <p>In a world where innovation knows no bounds, the convergence of quantum computation and artificial intelligence heralds an era of unparalleled technological marvels. It's a fusion that promises to reshape industries, revolutionize problem-solving, and even redefine the very essence of creativity. In this blog, we'll delve into this captivating fusion and peer into the crystal ball to glimpse the future it promises.</p>
 
 									<h3 class="major">The Quantum Leap</h3>
