--- a/star-cycle.html
+++ b/star-cycle.html
@@ -31,9 +31,9 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Research</a></li>
-								<li><a href="elements.html">Publication</a></li>
-                <li><a href="#">About Me</a></li>
+								<li><a href="#">Research</a></li>
+								<li><a href="#">Publications</a></li>
+								<li><a href="#">About Me</a></li>
 								<li><a href="#">Other Activities</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -52,6 +52,8 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									<img src="images/pic05.jpg" alt="">
+
                   <p>In the vast, dark theater of the cosmos, stars take center stage in a cosmic drama that unfolds over millions to billions of years. Their life cycle, far from mundane, is a spectacular dance of gravity, fusion, and cosmic turmoil. Join us as we embark on a celestial journey to witness the extraordinary life cycle of a star – a saga that is both breathtaking and mystifying.</p>
 
 									<h3 class="major">Act 1: The Stellar Nursery</h3>
