--- a/quantum-ai.html
+++ b/quantum-ai.html
@@ -62,7 +62,7 @@
 							<div class="wrapper">
 								<div class="inner">
 									<div class="fullscreen-image1">
-										<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="fullscreen-image1"><img src="images/pic04.jpg" alt="" /></a>
 											
 									</div>
 									
