--- a/star-cycle.html
+++ b/star-cycle.html
@@ -6,6 +6,15 @@
 -->
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R01VFP9EK9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R01VFP9EK9');
+</script>
 		<title>Celestial Rhythms: The Extraordinary Life Cycle of a Star</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
