--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="canonical" href="https://www.nilayghosh.com">
 	</head>
 	<body class="is-preload">
 
