--- a/star-cycle.html
+++ b/star-cycle.html
@@ -26,6 +26,7 @@
 				height: auto;
 			}
 		</style>
+		<link rel="canonical" href="https://www.nilayghosh.com/star-cycle">
 	</head>
 	<body class="is-preload">
 
