--- a/quantum-ai.html
+++ b/quantum-ai.html
@@ -26,6 +26,7 @@
 				height: auto;
 			}
 		</style>
+		<link rel="canonical" href="https://www.nilayghosh.com/quantum-ai">
 	</head>
 	<body class="is-preload">
 
